<resources>
    <string name="app_name">Home Work</string>
    <string name="kruchu_text">Кручу-верчу</string>
    <string name="zaputat_text">Запутать хочу</string>
    <string name="switch_text">Switch</string>
    <string name="flags_activity_label">Flags</string>
    <string name="switch_activity_label">Switch</string>
    <string name="homework1_button_text">hw 1</string>
    <string name="homework2_button_text">hw 2</string>
    <string name="homework3_button_text">hw 3</string>
    <string name="homework4_button_text">hw 4</string>
    <string name="homework5_button_text">hw 5</string>
    <string name="homework6_button_text">hw 6</string>
    <string name="homework7_button_text">hw 7</string>
    <string name="homework8_button_text">hw 8</string>
    <string name="homework9_button_text">hw 9</string>
    <string name="homework10_button_text">hw 10</string>
    <string name="homework11_button_text">hw 11</string>
    <string name="homework12_button_text">hw 12</string>
    <string name="homework13_button_text">hw 13</string>
    <string name="homework14_button_text">hw 14</string>
    <string name="homework15_button_text">hw 15</string>
    <string name="homework16_button_text">hw 16</string>
    <string name="homework17_button_text">hw 17</string>
    <string name="homework18_button_text">hw 18</string>
    <string name="patience_text">Be patient&#8230;</string>
    <string name="img_link">link</string>
    <string name="downloaded_image">Downloaded image</string>
    <string name="show_bc_string">Show buildConfig \n string</string>
    <string name="get_img_text">Get img</string>
    <string name="show_clock">Show clock</string>
    <string name="show_owl">Show owl</string>
    <string name="show_owl_clock">Show owl-clock</string>
    <string name="wifi_state">WiFi state</string>
    <string name="turn_wifi_off">Turn wifi off</string>
    <string name="turn_wifi_on">Turn wifi on</string>
    <string name="stock_id">Id = %d</string>
    <string name="stock_name">Stock name = %s</string>
    <string name="stock_bid">Stock bid = %.3f</string>
    <string name="stock_min_price">Stock min price = %.3f</string>
    <string name="stock_max_price">Stock max price = %.3f</string>
    <string name="search">Search</string>
    <string name="show_all">Show all</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="avatar_description">Avatar</string>
</resources>
