<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hw4.AnimationActivity">

    <Button
        android:id="@+id/show_clock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_clock"
        app:layout_constraintBottom_toTopOf="@+id/show_owl_clock_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/show_owl_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_owl"
        app:layout_constraintBottom_toTopOf="@+id/show_clock_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/show_owl_clock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_owl_clock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
